# bil-math

./: .gitignore  Cargo.toml  GLOSSARY.md  README.md  ROADMAP.md
crates/bil-math-cli/: Cargo.toml
crates/bil-math-cli/src/: main.rs
crates/bil-math-core/: Cargo.toml
crates/bil-math-core/src/: error.rs  graph.rs  ids.rs  lib.rs  scalar.rs
crates/bil-math-examples/: Cargo.toml
crates/bil-math-examples/src/: holonomy_obstruction.rs  lib.rs  toy_bank.rs
crates/bil-math-holonomy/: Cargo.toml
crates/bil-math-holonomy/src/: connection.rs  cycle.rs  holonomy.rs  lib.rs  obstruction.rs  transport.rs
crates/bil-math-lattice/: Cargo.toml
crates/bil-math-lattice/src/: lattice.rs  lib.rs  only_tighten.rs  policy.rs  poset.rs
crates/bil-math-provenance/: Cargo.toml
crates/bil-math-provenance/src/: dag.rs  event.rs  evidence.rs  lib.rs  replay.rs
crates/bil-math-sheaf/: Cargo.toml
crates/bil-math-sheaf/src/: coboundary.rs  cochain.rs  global_section.rs  laplacian.rs  lib.rs  residual.rs  sheaf.rs
docs/: README.md  holonomy-obstruction.md  notation.md  proof-spine.md  trace-matrix.md
